# CAG_Client_Service

./: README.md  pyproject.toml  requirements.txt
src/: app.py
src/data_cleaning/: classify_users_queries.py
src/rag/: cagger.py  utils.py
src/scraping/: scraper.py  utils.py
